# Qt6_Core_Beginners

./: README.md
01_Hello_Qt/: CMakeLists.txt
03_Lazy_Husband_Simulator/: CMakeLists.txt
04_Paint_Calculator/: CMakeLists.txt
05_Hungry_Cat_Simulator/: cat.cpp  cat.h
07_Working_with_Pointers/: calc.cpp
08_QTimer_Signal_Slot_Example/: CMakeLists.txt  main.cpp  timertest.cpp  timertest.h
09_Q_Property_Example/: CMakeLists.txt  destination.cpp  destination.h  main.cpp  source.cpp  source.h
10_Radio_Station_Signal_Slots/: CMakeLists.txt  channel.cpp  channel.h  main.cpp  radio.cpp  radio.h
Age_Calculator/: CMakeLists.txt  main.cpp
Hello_Qt/: main.cpp
Hungry_Cat_Simulator/: CMakeLists.txt  main.cpp
Lazy_Husband_Simulator/: main.cpp
Paint_Calculator/: main.cpp
Scope_Practice/: CMakeLists.txt  main.cpp
Working_with_Pointers/: CMakeLists.txt  calc.h  main.cpp
